repaired z-indexing

--- a/css/note.css
+++ b/css/note.css
@@ -42,7 +42,7 @@ not supported by any browser */
 }
 
 .note.active {
-    z-index: 2;
+    /*z-index: 2;*/
     box-shadow: 0px 14px 50px 0px rgba(130,130,130,1);
 }
 
